tests/NormalTests/paczka1/small_fuzzy/92781182.err
Error in line 6: A272 A57 26,6
Error in line 4: HqQp8aC A783 48,0
